--- a/assignment/09-hw3/index.html
+++ b/assignment/09-hw3/index.html
@@ -31,8 +31,8 @@
     
   
   <meta name="description" content="Due Date This assignment is due by midnight Pacific Time, November 3rd, 2023.
-The learning objectives are to conduct data scraping and perform text mining.
-Text Mining A new dataset has been added to the data science data repository https://github.com/USCbiostats/data-science-data/tree/master/03_pubmed. The dataset contains 3,241 abstracts from articles collected via 5 PubMed searches. The search terms are listed in the second column, term and these will serve as the &ldquo;documents.&rdquo; Your job is to analyse these abstracts to find interesting insights.">
+Text Mining A new dataset has been added to the data science data repository https://github.com/USCbiostats/data-science-data/tree/master/03_pubmed. The dataset contains 3,241 abstracts from articles collected via 5 PubMed searches. The search terms are listed in the second column, term and these will serve as the &ldquo;documents.&rdquo; Your job is to analyse these abstracts to find interesting insights.
+ Tokenize the abstracts and count the number of each token.">
 
   
   <link rel="alternate" hreflang="en-us" href="https://uscbiostats.github.io/PM566/assignment/09-hw3/">
@@ -248,8 +248,8 @@ Text Mining A new dataset has been added to the data science data repository htt
   <meta property="og:url" content="https://uscbiostats.github.io/PM566/assignment/09-hw3/">
   <meta property="og:title" content="Assignment 03 - Text Mining | Introduction to Health Data Science - PM 566">
   <meta property="og:description" content="Due Date This assignment is due by midnight Pacific Time, November 3rd, 2023.
-The learning objectives are to conduct data scraping and perform text mining.
-Text Mining A new dataset has been added to the data science data repository https://github.com/USCbiostats/data-science-data/tree/master/03_pubmed. The dataset contains 3,241 abstracts from articles collected via 5 PubMed searches. The search terms are listed in the second column, term and these will serve as the &ldquo;documents.&rdquo; Your job is to analyse these abstracts to find interesting insights."><meta property="og:image" content="https://uscbiostats.github.io/PM566/img/social-image.png">
+Text Mining A new dataset has been added to the data science data repository https://github.com/USCbiostats/data-science-data/tree/master/03_pubmed. The dataset contains 3,241 abstracts from articles collected via 5 PubMed searches. The search terms are listed in the second column, term and these will serve as the &ldquo;documents.&rdquo; Your job is to analyse these abstracts to find interesting insights.
+ Tokenize the abstracts and count the number of each token."><meta property="og:image" content="https://uscbiostats.github.io/PM566/img/social-image.png">
   <meta property="twitter:image" content="https://uscbiostats.github.io/PM566/img/social-image.png"><meta property="og:locale" content="en-us">
   
     
@@ -529,7 +529,6 @@ Text Mining A new dataset has been added to the data science data repository htt
     <div class="article-style">
       <h2 id="due-date">Due Date</h2>
 <p>This assignment is due by midnight Pacific Time, November 3rd, 2023.</p>
-<p>The learning objectives are to conduct data scraping and perform text mining.</p>
 <h2 id="text-mining">Text Mining</h2>
 <p>A new dataset has been added to the data science data repository 
 <a href="https://github.com/USCbiostats/data-science-data/tree/master/03_pubmed" target="_blank" rel="noopener">https://github.com/USCbiostats/data-science-data/tree/master/03_pubmed</a>. The dataset contains 3,241 abstracts from articles collected via 5 PubMed searches. The search terms are listed in the second column, <code>term</code> and these will serve as the &ldquo;documents.&rdquo; Your job is to analyse these abstracts to find interesting insights.</p>
