--- a/assignment/index.html
+++ b/assignment/index.html
@@ -518,8 +518,8 @@ Narrative: Through this project you will launch a portfolio of data science proj
       <div class="article-style">
         
           Due Date This assignment is due by midnight Pacific Time, November 3rd, 2023.
-The learning objectives are to conduct data scraping and perform text mining.
 Text Mining A new dataset has been added to the data science data repository https://github.com/USCbiostats/data-science-data/tree/master/03_pubmed. The dataset contains 3,241 abstracts from articles collected via 5 PubMed searches. The search terms are listed in the second column, term and these will serve as the &ldquo;documents.&rdquo; Your job is to analyse these abstracts to find interesting insights.
+ Tokenize the abstracts and count the number of each token.
         
       </div>
     </div>
