deploy: 556c3f6aeb7932a397474a07721cdc27da960dc9

--- a/assignment/10-lab/index.html
+++ b/assignment/10-lab/index.html
@@ -615,7 +615,7 @@ AND
 <pre><code class="language-sql">
 </code></pre>
 <h1 id="exercise-7">Exercise 7</h1>
-<p>The following query calculates a number of summary statistics for the payment table using <code>MAX</code>, <code>MIN</code>, <code>AVG</code> and <code>SUM</code></p>
+<p>Write a query that calculates a number of summary statistics for the payment table using <code>MAX</code>, <code>MIN</code>, <code>AVG</code> and <code>SUM</code></p>
 <pre><code class="language-sql">
 </code></pre>
 <h2 id="exercise-71">Exercise 7.1</h2>
