deploy: e9acbc0238aaea335d246fde25b64b28f8ee541d

--- a/assignment/14-final/index.html
+++ b/assignment/14-final/index.html
@@ -30,10 +30,10 @@
   
     
   
-  <meta name="description" content="Final Project   Presentation (5 minutes): Friday December 1st, 2023
-  Written report (single spaced, 6-8 pages where 3-4 pages are tables and figures): Friday December 8th, 2023.
-  Learning Objective: To apply the skills learned in PM 566 by analyzing and interpreting a dataset of your choice.
-Narrative: Through this project you will launch a portfolio of data science projects that will become seminal for your job hunt.">
+  <meta name="description" content="Final Project Due date: Friday December 8th, 2023
+Learning Objective: To apply the skills learned in PM 566 by analyzing and interpreting a dataset of your choice.
+Narrative: Through this project you will launch a portfolio of data science projects that will become seminal for your job hunt.
+Using the dataset from your midterm, make sure you have formulated a clear and concise question to answer. You will apply the skills learned throughout the semester to answer this question.">
 
   
   <link rel="alternate" hreflang="en-us" href="https://uscbiostats.github.io/PM566/assignment/14-final/">
@@ -248,10 +248,10 @@ Narrative: Through this project you will launch a portfolio of data science proj
   <meta property="og:site_name" content="Introduction to Health Data Science - PM 566">
   <meta property="og:url" content="https://uscbiostats.github.io/PM566/assignment/14-final/">
   <meta property="og:title" content="Final Project | Introduction to Health Data Science - PM 566">
-  <meta property="og:description" content="Final Project   Presentation (5 minutes): Friday December 1st, 2023
-  Written report (single spaced, 6-8 pages where 3-4 pages are tables and figures): Friday December 8th, 2023.
-  Learning Objective: To apply the skills learned in PM 566 by analyzing and interpreting a dataset of your choice.
-Narrative: Through this project you will launch a portfolio of data science projects that will become seminal for your job hunt."><meta property="og:image" content="https://uscbiostats.github.io/PM566/img/social-image.png">
+  <meta property="og:description" content="Final Project Due date: Friday December 8th, 2023
+Learning Objective: To apply the skills learned in PM 566 by analyzing and interpreting a dataset of your choice.
+Narrative: Through this project you will launch a portfolio of data science projects that will become seminal for your job hunt.
+Using the dataset from your midterm, make sure you have formulated a clear and concise question to answer. You will apply the skills learned throughout the semester to answer this question."><meta property="og:image" content="https://uscbiostats.github.io/PM566/img/social-image.png">
   <meta property="twitter:image" content="https://uscbiostats.github.io/PM566/img/social-image.png"><meta property="og:locale" content="en-us">
   
     
@@ -530,27 +530,20 @@ Narrative: Through this project you will launch a portfolio of data science proj
 
     <div class="article-style">
       <h1 id="final-project">Final Project</h1>
-<ul>
-<li>
-<p>Presentation (5 minutes): Friday December 1st, 2023</p>
-</li>
-<li>
-<p>Written report (single spaced, 6-8 pages where 3-4 pages are tables and figures): Friday December 8th, 2023.</p>
-</li>
-</ul>
+<p>Due date: Friday December 8th, 2023</p>
 <p><strong>Learning Objective</strong>: To apply the skills learned in
 PM 566 by analyzing and interpreting a dataset of your choice.</p>
 <p><strong>Narrative</strong>: Through this project you will launch a
 portfolio of data science projects that will become seminal for your job hunt.</p>
 <p>Using the dataset from your midterm, make sure you have
-formulated a clear and concise question to answer. You will apply the
-skills learned throughout the semester to answer this question.</p>
-<p><strong>Deliverables</strong>: 1) A 5-minute presentation where you
-walk us through your website; 2) A written report with embedded tables
-and figures that is submitted as a PDF to a final project-specific
-GitHub repository <em>and</em> as a downloadable link on your website.
-Please see the checklist below for additional
-details.</p>
+formulated a clear and concise question to answer. You will apply the skills learned throughout the semester to answer this question.</p>
+<h2 id="deliverables">Deliverables</h2>
+<ul>
+<li>Written report (single spaced, 6-8 pages where 3-4 pages are tables and figures)</li>
+<li>Website (summarize your analysis, include interactive figures, provide a link to download the full written report)</li>
+</ul>
+<h3 id="written-report">Written report</h3>
+<p>The actual analysis should be included in the PDF report. The PDF report can refer to interactive visualizations included in the website, but otherwise all figures and tables should be included in the PDF.</p>
 <p>The report should have the following sections (elaborate
 from what was written in the midterm):
 <strong>Introduction</strong> (provide background on your
@@ -561,10 +554,10 @@ wrangled the data, what tools you used for data exploration),
 tables and figures from your analysis, make separate subsections as needed),
 and a brief <strong>Conclusion and Summary</strong> where
 you describe your findings.</p>
-<p>In your report, please do not include code (so make sure
-<code>echo = FALSE</code>), unformatted output, or dataset summaries (e.g. output
-from head(), str(), etc.)</p>
-<h2 id="checklist-for-final-project">Checklist for Final Project</h2>
+<p>In your report, please do not include any code (so make sure
+<code>echo = FALSE</code>), unformatted output, or dataset summaries (e.g. output from head(), str(), etc.)</p>
+<h3 id="website-checklist">Website Checklist</h3>
+<p>See the checklist below for additional details about the website requirements:</p>
 <ol>
 <li>
 <p><span dir="ltr"><strong>Create a website</strong> (HTML document and all the
@@ -588,9 +581,6 @@ five interactive tables and figures. If you want to include
 more to showcase your skills, we request you do so by adding
 extra pages to the website. We will only evaluate the homepage
 of the website.</span></p>
-<p>The actual analysis should be included in the PDF
-report. <strong>The PDF report can refer to visualizations included in the
-website</strong>.</p>
 </li>
 </ol>
 </li>
@@ -602,32 +592,21 @@ and PDF report, to the GitHub repository.</span></p>
 <p><span dir="ltr">Make sure that the <strong>website</strong>, which is to be
 <strong>hosted in GitHub pages</strong>, actually <strong>works</strong>, i.e., figures and
 interactive visualizations are properly rendered when visiting the
-website..</span></p>
+website.</span></p>
 </li>
 <li>
-<p><span dir="ltr"><strong>Have a README.md file</strong> in the upper level of
+<p><span dir="ltr">Have a <code>README.md</code> file in the upper level of
 the repository. This file provides general information about the
 project, like title, brief description, etc.</span></p>
 </li>
 <li>
-<p><span dir="ltr">The <strong>README.md file links to the website</strong>, e.g.
-
-<a href="https://username.github.io/pm566-project," target="_blank" rel="noopener">https://username.github.io/pm566-project,</a> .</span></p>
+<p><span dir="ltr">The <code>README.md</code> file should provide a link to the website, e.g.
+https://<USERNAME>.github.io/pm566-project.</span></p>
 </li>
 <li>
-<p><span dir="ltr">Have a <strong>“data” folder</strong> with either the data or
+<p><span dir="ltr">Have a <code>data</code> folder with either the dataset or
 instructions about how to acquire it. You should provide the
-instructions in a README.md within that folder.</span></p>
-</li>
-<li>
-<p><span dir="ltr"><strong>(optional)</strong> Your document is <strong>fully
-reproducible</strong>, meaning you don’t have paths to files not shared
-in the repository. For example, if you are loading a dataset with
-“fread,” it should be something like
-“fread(“https://data.com/dataset.csv”),” so you are directly
-using data online, or “fread(“data/dataset.csv”),” so the data
-needed has been shared on GitHub and is contained in the path
-“data/dataset.csv.”</span></p>
+instructions in a <code>README.md</code> file within that folder.</span></p>
 </li>
 </ol>
 
