--- a/assignment/11-hw4/index.html
+++ b/assignment/11-hw4/index.html
@@ -31,9 +31,9 @@
     
   
   <meta name="description" content="Due Date This assignment is due by midnight Pacific Time, November 17th, 2023.
-The learning objectives are to conduct data scraping and perform text mining.
-HPC Problem 1: Make things run faster Rewrite the following R functions to make them faster. It is OK (and recommended) to take a look at Stackoverflow and Google
-# Total row sums fun1 &lt;- function(mat) { n &lt;- nrow(mat) ans &lt;- double(n) for (i in 1:n) { ans[i] &lt;- sum(mat[i, ]) } ans } fun1alt &lt;- function(mat) { # YOUR CODE HERE } # Cumulative sum by row fun2 &lt;- function(mat) { n &lt;- nrow(mat) k &lt;- ncol(mat) ans &lt;- mat for (i in 1:n) { for (j in 2:k) { ans[i,j] &lt;- mat[i, j] &#43; ans[i, j - 1] } } ans } fun2alt &lt;- function(mat) { # YOUR CODE HERE } # Use the data with this code set.">
+The learning objectives are to write faster code for computational task requiring a loop and to implement some queries and basic data wrangling in SQL.
+HPC Make things run faster Rewrite the following R functions to make them faster. It is OK (and recommended) to take a look at StackOverflow and Google
+# Total row sums fun1 &lt;- function(mat) { n &lt;- nrow(mat) ans &lt;- double(n) for (i in 1:n) { ans[i] &lt;- sum(mat[i, ]) } ans } fun1alt &lt;- function(mat) { # YOUR CODE HERE } # Cumulative sum by row fun2 &lt;- function(mat) { n &lt;- nrow(mat) k &lt;- ncol(mat) ans &lt;- mat for (i in 1:n) { for (j in 2:k) { ans[i,j] &lt;- mat[i, j] &#43; ans[i, j - 1] } } ans } fun2alt &lt;- function(mat) { # YOUR CODE HERE }  Question 1 Using the dataset generated below (dat), check that the output of both of your new functions matches the output of the original functions.">
 
   
   <link rel="alternate" hreflang="en-us" href="https://uscbiostats.github.io/PM566/assignment/11-hw4/">
@@ -249,9 +249,9 @@ HPC Problem 1: Make things run faster Rewrite the following R functions to make 
   <meta property="og:url" content="https://uscbiostats.github.io/PM566/assignment/11-hw4/">
   <meta property="og:title" content="Assignment 04 - HPC and SQL | Introduction to Health Data Science - PM 566">
   <meta property="og:description" content="Due Date This assignment is due by midnight Pacific Time, November 17th, 2023.
-The learning objectives are to conduct data scraping and perform text mining.
-HPC Problem 1: Make things run faster Rewrite the following R functions to make them faster. It is OK (and recommended) to take a look at Stackoverflow and Google
-# Total row sums fun1 &lt;- function(mat) { n &lt;- nrow(mat) ans &lt;- double(n) for (i in 1:n) { ans[i] &lt;- sum(mat[i, ]) } ans } fun1alt &lt;- function(mat) { # YOUR CODE HERE } # Cumulative sum by row fun2 &lt;- function(mat) { n &lt;- nrow(mat) k &lt;- ncol(mat) ans &lt;- mat for (i in 1:n) { for (j in 2:k) { ans[i,j] &lt;- mat[i, j] &#43; ans[i, j - 1] } } ans } fun2alt &lt;- function(mat) { # YOUR CODE HERE } # Use the data with this code set."><meta property="og:image" content="https://uscbiostats.github.io/PM566/img/social-image.png">
+The learning objectives are to write faster code for computational task requiring a loop and to implement some queries and basic data wrangling in SQL.
+HPC Make things run faster Rewrite the following R functions to make them faster. It is OK (and recommended) to take a look at StackOverflow and Google
+# Total row sums fun1 &lt;- function(mat) { n &lt;- nrow(mat) ans &lt;- double(n) for (i in 1:n) { ans[i] &lt;- sum(mat[i, ]) } ans } fun1alt &lt;- function(mat) { # YOUR CODE HERE } # Cumulative sum by row fun2 &lt;- function(mat) { n &lt;- nrow(mat) k &lt;- ncol(mat) ans &lt;- mat for (i in 1:n) { for (j in 2:k) { ans[i,j] &lt;- mat[i, j] &#43; ans[i, j - 1] } } ans } fun2alt &lt;- function(mat) { # YOUR CODE HERE }  Question 1 Using the dataset generated below (dat), check that the output of both of your new functions matches the output of the original functions."><meta property="og:image" content="https://uscbiostats.github.io/PM566/img/social-image.png">
   <meta property="twitter:image" content="https://uscbiostats.github.io/PM566/img/social-image.png"><meta property="og:locale" content="en-us">
   
     
@@ -531,10 +531,10 @@ HPC Problem 1: Make things run faster Rewrite the following R functions to make 
     <div class="article-style">
       <h2 id="due-date">Due Date</h2>
 <p>This assignment is due by midnight Pacific Time, November 17th, 2023.</p>
-<p>The learning objectives are to conduct data scraping and perform text mining.</p>
+<p>The learning objectives are to write faster code for computational task requiring a loop and to implement some queries and basic data wrangling in SQL.</p>
 <h2 id="hpc">HPC</h2>
-<h3 id="problem--1-make-things-run-faster">Problem  1: Make things run faster</h3>
-<p>Rewrite the following R functions to make them faster. It is OK (and recommended) to take a look at Stackoverflow and Google</p>
+<h3 id="make-things-run-faster">Make things run faster</h3>
+<p>Rewrite the following R functions to make them faster. It is OK (and recommended) to take a look at StackOverflow and Google</p>
 <pre><code class="language-r"># Total row sums
 fun1 &lt;- function(mat) {
   n &lt;- nrow(mat)
@@ -565,26 +565,26 @@ fun2 &lt;- function(mat) {
 fun2alt &lt;- function(mat) {
   # YOUR CODE HERE
 }
-
-
-# Use the data with this code
+</code></pre>
+<h3 id="question-1">Question 1</h3>
+<p>Using the dataset generated below (<code>dat</code>), check that the output of both of your new functions matches the output of the original functions. Then use <code>microbenchmark</code> to check that your version is actually faster.</p>
+<pre><code class="language-r"># Use the data with this code
 set.seed(2315)
 dat &lt;- matrix(rnorm(200 * 100), nrow = 200)
 
 # Test for the first
 microbenchmark::microbenchmark(
   fun1(dat),
-  fun1alt(dat), unit = &quot;relative&quot;, check = &quot;equivalent&quot;
+  fun1alt(dat), unit = &quot;relative&quot;
 )
 
 # Test for the second
 microbenchmark::microbenchmark(
   fun2(dat),
-  fun2alt(dat), unit = &quot;relative&quot;, check = &quot;equivalent&quot;
+  fun2alt(dat), unit = &quot;relative&quot;
 )
 </code></pre>
-<p>The last argument, <code>check = “equivalent”</code>, is included to make sure that the functions return the same result.</p>
-<h3 id="problem-2-make-things-run-faster-with-parallel-computing">Problem 2: Make things run faster with parallel computing</h3>
+<h3 id="make-things-run-faster-with-parallel-computing">Make things run faster with parallel computing</h3>
 <p>The following function allows simulating pi:</p>
 <pre><code class="language-r">sim_pi &lt;- function(n = 1000, i = NULL) {
   p &lt;- matrix(runif(n*2), ncol = 2)
@@ -603,7 +603,8 @@ system.time({
   print(mean(ans))
 })
 </code></pre>
-<p>Rewrite the previous code using <code>parLapply()</code> to make it run faster. Make sure you set the seed using <code>clusterSetRNGStream()</code>:</p>
+<h3 id="question-2">Question 2</h3>
+<p>Rewrite the previous code using <code>parLapply()</code> (or your parallelization method of choice) to parallelize it. Run the code once, using <code>system.time()</code>, to show that your version is faster.</p>
 <pre><code class="language-r"># YOUR CODE HERE
 system.time({
   # YOUR CODE HERE
@@ -632,16 +633,16 @@ dbWriteTable(con, &quot;film&quot;, film)
 dbWriteTable(con, &quot;film_category&quot;, film_category)
 dbWriteTable(con, &quot;category&quot;, category)
 </code></pre>
-<p>When you write a new chunk, remember to replace the <code>r</code> with <code>sql, connection=con</code>. Some of these questions will reqruire you to use an  inner join. Read more about them here 
+<p>When you write a new chunk, remember to replace the <code>r</code> with <code>sql, connection=con</code>. Some of these questions will require you to use an inner join. Read more about them here 
 <a href="https://www.w3schools.com/sql/sql_join_inner.asp" target="_blank" rel="noopener">https://www.w3schools.com/sql/sql_join_inner.asp</a></p>
-<h2 id="question-1">Question 1</h2>
-<p>How many many movies are avaliable in each <code>rating</code> catagory?</p>
-<h2 id="question-2">Question 2</h2>
-<p>What is the average replacement cost and rental rate for each <code>rating</code> category?</p>
 <h2 id="question-3">Question 3</h2>
-<p>Use table <code>film_category</code> together with <code>film</code> to find how many films there are with each category ID.</p>
+<p>How many many movies are available in each <code>rating</code> category?</p>
 <h2 id="question-4">Question 4</h2>
-<p>Incorporate table <code>category</code> into the answer to the previous question to find the name of the most popular category.</p>
+<p>What is the average replacement cost and rental rate for each <code>rating</code> category?</p>
+<h2 id="question-5">Question 5</h2>
+<p>Use table <code>film_category</code> together with <code>film</code> to find how many films there are with each category ID.</p>
+<h2 id="question-6">Question 6</h2>
+<p>Incorporate the <code>category</code> table into the answer to the previous question to find the name of the most popular category.</p>
 
     </div>
 
