deploy: 59b1662aa37dda91b2352ac49f4a2a7c4636f48d

--- a/syllabus/index.html
+++ b/syllabus/index.html
@@ -694,7 +694,7 @@ Time: Friday 9am - 12:55pm"><meta property="og:image" content="https://uscbiosta
             </tr>
             <tr>
              <td align="right" style="width:20%;text-align:left">Week 15 (12/1)</td>
-             <td style="width:50%;text-align:left">Final project workshop: review project progress, preliminary presentations</td>
+             <td style="width:50%;text-align:left">Final project workshop: review progress</td>
             </tr>
             <tr>
              <td align="right" style="width:20%;text-align:left">Week 16 (12/8)</td>
