--- a/schedule/index.html
+++ b/schedule/index.html
@@ -705,13 +705,14 @@
                 <font color="f1f1f1">
                     <i class="fas fa-chalkboard-teacher fa-lg"></i></font>
             </td>
-            <td align="center" style="width:10%;text-align:center"><a
-                    href="../assignment/13-hw5/">
-                    <i class="fas fa-laptop-code"></i></a></td>
+            <td align="center" style="width:10%;text-align:center">
+                <font color="f1f1f1">
+                    <i class="fas fa-laptop-code"></i></font>
+            </td>
         </tr>
         <tr>
             <td align="right" style="width:20%;text-align:right">Week 15 (12/1)</td>
-            <td style="width:50%;text-align:left">Final project workshop: review project progress, preliminary presentations</td>
+            <td style="width:50%;text-align:left">Final project workshop: review progress</td>
             <td align="center" style="width:10%;text-align:center"><a
                     href="../reading/13-reading/">
                     <i class="fas fa-book-reader fa-lg"></i></a></td>
