deploy: fdff25dc1fcf801d605b4e264b52abe75a70be6a

--- a/assignment/14-final/index.html
+++ b/assignment/14-final/index.html
@@ -30,7 +30,7 @@
   
     
   
-  <meta name="description" content="Final Project Due date: Friday December 8th, 2023
+  <meta name="description" content="Due date: Friday December 8th, 2023
 Learning Objective: To apply the skills learned in PM 566 by analyzing and interpreting a dataset of your choice.
 Narrative: Through this project you will launch a portfolio of data science projects that will become seminal for your job hunt.
 Using the dataset from your midterm, make sure you have formulated a clear and concise question to answer. You will apply the skills learned throughout the semester to answer this question.">
@@ -248,7 +248,7 @@ Using the dataset from your midterm, make sure you have formulated a clear and c
   <meta property="og:site_name" content="Introduction to Health Data Science - PM 566">
   <meta property="og:url" content="https://uscbiostats.github.io/PM566/assignment/14-final/">
   <meta property="og:title" content="Final Project | Introduction to Health Data Science - PM 566">
-  <meta property="og:description" content="Final Project Due date: Friday December 8th, 2023
+  <meta property="og:description" content="Due date: Friday December 8th, 2023
 Learning Objective: To apply the skills learned in PM 566 by analyzing and interpreting a dataset of your choice.
 Narrative: Through this project you will launch a portfolio of data science projects that will become seminal for your job hunt.
 Using the dataset from your midterm, make sure you have formulated a clear and concise question to answer. You will apply the skills learned throughout the semester to answer this question."><meta property="og:image" content="https://uscbiostats.github.io/PM566/img/social-image.png">
@@ -529,8 +529,7 @@ Using the dataset from your midterm, make sure you have formulated a clear and c
   <div class="article-container">
 
     <div class="article-style">
-      <h1 id="final-project">Final Project</h1>
-<p>Due date: Friday December 8th, 2023</p>
+      <p>Due date: Friday December 8th, 2023</p>
 <p><strong>Learning Objective</strong>: To apply the skills learned in
 PM 566 by analyzing and interpreting a dataset of your choice.</p>
 <p><strong>Narrative</strong>: Through this project you will launch a
