--- a/assignment/index.html
+++ b/assignment/index.html
@@ -502,7 +502,7 @@ Interactive Visualization I and II   Using your midterm/final project data, crea
       <h2><a href="/PM566/assignment/14-final/" >Final Project</a></h2>
       <div class="article-style">
         
-          Final Project Due date: Friday December 8th, 2023
+          Due date: Friday December 8th, 2023
 Learning Objective: To apply the skills learned in PM 566 by analyzing and interpreting a dataset of your choice.
 Narrative: Through this project you will launch a portfolio of data science projects that will become seminal for your job hunt.
 Using the dataset from your midterm, make sure you have formulated a clear and concise question to answer. You will apply the skills learned throughout the semester to answer this question.
