deploy: b801d3d6b0b3ad1cda115f080e2cf251c1f3f49c

--- a/assignment/14-final/index.html
+++ b/assignment/14-final/index.html
@@ -600,7 +600,8 @@ project, like title, brief description, etc.</span></p>
 </li>
 <li>
 <p><span dir="ltr">The <code>README.md</code> file should provide a link to the website, e.g.
-https://<USERNAME>.github.io/pm566-project.</span></p>
+
+<a href="https://USERNAME.github.io/pm566-project" target="_blank" rel="noopener">https://USERNAME.github.io/pm566-project</a>.</span></p>
 </li>
 <li>
 <p><span dir="ltr">Have a <code>data</code> folder with either the dataset or
