--- a/schedule/index.html
+++ b/schedule/index.html
@@ -31,7 +31,7 @@
     
   
   <meta name="description" content="Here’s your roadmap for the semester!
-  Readings should be completed before each class session  Class materials (slides, in-class activities, etc.) will be added on the day of class  Assignments are due by 11:59 PM on the day they are due     Week 1 (8/25) Introduction to Data Science tools: R, Python, Markdown, Git, command line tools       Week 2 (9/1) Version Control &amp; Reproducible Research       Week 3 (9/8) Exploratory data analysis       Week 4 (9/15) Data visualization      Week 5 (9/22) Data cleaning and wrangling       Week 6 (9/29) Text Mining      Week 7 (10/6) Scraping, APIs, and Regular Expressions       Week 8 (10/13) Fall Recess (No class).">
+  Readings should be completed before each class session  Class materials (slides, in-class activities, etc.) will be added on the day of class  Assignments are due by 11:59 PM on the day they are due     Week 1 (8/30) Introduction to Data Science tools: R, Python, Quarto, Git, command line tools       Week 2 (9/6) GitHub, Version Control, &amp; Reproducible Research       Week 3 (9/13) Exploratory Data Analysis      Week 4 (9/20) Data Visualization       Week 5 (9/27) Data Cleaning and Wrangling      Week 6 (10/4) Text Mining &amp; Sentiment Analysis       Week 7 (10/11) NO CLASS - Fall Recess.">
 
   
   <link rel="alternate" hreflang="en-us" href="https://uscbiostats.github.io/PM566/schedule/">
@@ -247,7 +247,7 @@
   <meta property="og:url" content="https://uscbiostats.github.io/PM566/schedule/">
   <meta property="og:title" content="Schedule | Introduction to Health Data Science - PM 566">
   <meta property="og:description" content="Here’s your roadmap for the semester!
-  Readings should be completed before each class session  Class materials (slides, in-class activities, etc.) will be added on the day of class  Assignments are due by 11:59 PM on the day they are due     Week 1 (8/25) Introduction to Data Science tools: R, Python, Markdown, Git, command line tools       Week 2 (9/1) Version Control &amp; Reproducible Research       Week 3 (9/8) Exploratory data analysis       Week 4 (9/15) Data visualization      Week 5 (9/22) Data cleaning and wrangling       Week 6 (9/29) Text Mining      Week 7 (10/6) Scraping, APIs, and Regular Expressions       Week 8 (10/13) Fall Recess (No class)."><meta property="og:image" content="https://uscbiostats.github.io/PM566/img/social-image.png">
+  Readings should be completed before each class session  Class materials (slides, in-class activities, etc.) will be added on the day of class  Assignments are due by 11:59 PM on the day they are due     Week 1 (8/30) Introduction to Data Science tools: R, Python, Quarto, Git, command line tools       Week 2 (9/6) GitHub, Version Control, &amp; Reproducible Research       Week 3 (9/13) Exploratory Data Analysis      Week 4 (9/20) Data Visualization       Week 5 (9/27) Data Cleaning and Wrangling      Week 6 (10/4) Text Mining &amp; Sentiment Analysis       Week 7 (10/11) NO CLASS - Fall Recess."><meta property="og:image" content="https://uscbiostats.github.io/PM566/img/social-image.png">
   <meta property="twitter:image" content="https://uscbiostats.github.io/PM566/img/social-image.png"><meta property="og:locale" content="en-us">
   
     
@@ -525,8 +525,8 @@
 <table class="table schedule" style="max-width:100%">
     <tbody>
         <tr>
-            <td align="right" style="width:20%;text-align:right">Week 1 (8/25)</td>
-            <td style="width:50%;text-align:left">Introduction to Data Science tools: R, Python, Markdown, Git, command line tools</td>
+            <td align="right" style="width:20%;text-align:right">Week 1 (8/30)</td>
+            <td style="width:50%;text-align:left">Introduction to Data Science tools: R, Python, Quarto, Git, command line tools</td>
             <td align="center" style="width:10%;text-align:center"><a
                     href="../reading/01-reading/">
                     <i class="fas fa-book-reader fa-lg"></i></a></td>
@@ -538,8 +538,8 @@
             </td>
         </tr>
         <tr>
-            <td align="right" style="width:20%;text-align:right">Week 2 (9/1)</td>
-            <td style="width:50%;text-align:left">Version Control &amp; Reproducible Research</td>
+            <td align="right" style="width:20%;text-align:right">Week 2 (9/6)</td>
+            <td style="width:50%;text-align:left">GitHub, Version Control, &amp; Reproducible Research</td>
             <td align="center" style="width:10%;text-align:center"><a
                     href="../reading/02-reading/">
                     <i class="fas fa-book-reader fa-lg"></i></a></td>
@@ -551,37 +551,24 @@
             </td>
         </tr>
         <tr>
-            <td align="right" style="width:20%;text-align:right">Week 3 (9/8)</td>
-            <td style="width:50%;text-align:left">Exploratory data analysis</td>
+            <td align="right" style="width:20%;text-align:right">Week 3 (9/13)</td>
+            <td style="width:50%;text-align:left">Exploratory Data Analysis</td>
             <td align="center" style="width:10%;text-align:center"><a
                     href="../reading/03-reading/">
                     <i class="fas fa-book-reader fa-lg"></i></a></td>
             <td align="center" style="width:10%;text-align:center"><a href="../class/03-class/">
-                    <i class="fas fa-chalkboard-teacher fa-lg"></i></a></td>
-            <td align="center" style="width:10%;text-align:center">
-                <font color="f1f1f1">
-                    <i class="fas fa-laptop-code"></i></font>
-            </td>
-        </tr>
-        <tr>
-            <td align="right" style="width:20%;text-align:right">Week 4 (9/15)</td>
-            <td style="width:50%;text-align:left">Data visualization</td>
-            <td align="center" style="width:10%;text-align:center"><a
-                    href="../reading/04-reading/">
-                    <i class="fas fa-book-reader fa-lg"></i></a></td>
-            <td align="center" style="width:10%;text-align:center"><a href="../class/04-class/">
                     <i class="fas fa-chalkboard-teacher fa-lg"></i></a></td>
             <td align="center" style="width:10%;text-align:center"><a
                     href="../assignment/03-hw1/">
                     <i class="fas fa-laptop-code"></i></a></td>
         </tr>
         <tr>
-            <td align="right" style="width:20%;text-align:right">Week 5 (9/22)</td>
-            <td style="width:50%;text-align:left">Data cleaning and wrangling</td>
+            <td align="right" style="width:20%;text-align:right">Week 4 (9/20)</td>
+            <td style="width:50%;text-align:left">Data Visualization</td>
             <td align="center" style="width:10%;text-align:center"><a
-                    href="../reading/05-reading/">
+                    href="../reading/04-reading/">
                     <i class="fas fa-book-reader fa-lg"></i></a></td>
-            <td align="center" style="width:10%;text-align:center"><a href="../class/05-class/">
+            <td align="center" style="width:10%;text-align:center"><a href="../class/04-class/">
                     <i class="fas fa-chalkboard-teacher fa-lg"></i></a></td>
             <td align="center" style="width:10%;text-align:center">
                 <font color="f1f1f1">
@@ -589,24 +576,24 @@
             </td>
         </tr>
         <tr>
-            <td align="right" style="width:20%;text-align:right">Week 6 (9/29)</td>
-            <td style="width:50%;text-align:left">Text Mining</td>
+            <td align="right" style="width:20%;text-align:right">Week 5 (9/27)</td>
+            <td style="width:50%;text-align:left">Data Cleaning and Wrangling</td>
             <td align="center" style="width:10%;text-align:center"><a
-                    href="../reading/06-reading/">
+                    href="../reading/05-reading/">
                     <i class="fas fa-book-reader fa-lg"></i></a></td>
-            <td align="center" style="width:10%;text-align:center"><a href="../class/06-class/">
+            <td align="center" style="width:10%;text-align:center"><a href="../class/05-class/">
                     <i class="fas fa-chalkboard-teacher fa-lg"></i></a></td>
             <td align="center" style="width:10%;text-align:center"><a
                     href="../assignment/05-hw2/">
                     <i class="fas fa-laptop-code"></i></a></td>
         </tr>
         <tr>
-            <td align="right" style="width:20%;text-align:right">Week 7 (10/6)</td>
-            <td style="width:50%;text-align:left">Scraping, APIs, and Regular Expressions</td>
+            <td align="right" style="width:20%;text-align:right">Week 6 (10/4)</td>
+            <td style="width:50%;text-align:left">Text Mining &amp; Sentiment Analysis</td>
             <td align="center" style="width:10%;text-align:center"><a
-                    href="../reading/07-reading/">
+                    href="../reading/06-reading/">
                     <i class="fas fa-book-reader fa-lg"></i></a></td>
-            <td align="center" style="width:10%;text-align:center"><a href="../class/07-class/">
+            <td align="center" style="width:10%;text-align:center"><a href="../class/06-class/">
                     <i class="fas fa-chalkboard-teacher fa-lg"></i></a></td>
             <td align="center" style="width:10%;text-align:center">
                 <font color="f1f1f1">
@@ -614,8 +601,8 @@
             </td>
         </tr>
         <tr>
-            <td align="right" style="width:20%;text-align:right">Week 8 (10/13)</td>
-            <td style="width:50%;text-align:left">Fall Recess (No class). Midterm Exam</td>
+            <td align="right" style="width:20%;text-align:right">Week 7 (10/11)</td>
+            <td style="width:50%;text-align:left">NO CLASS - Fall Recess. Midterm Project</td>
             <td align="center" style="width:10%;text-align:center">
                 <font color="f1f1f1">
                     <i class="fas fa-book-reader fa-lg"></i></font>
@@ -629,12 +616,12 @@
                     <i class="fas fa-laptop-code"></i></a></td>
         </tr>
         <tr>
-            <td align="right" style="width:20%;text-align:right">Week 9 (10/20)</td>
-            <td style="width:50%;text-align:left">(Midterm Exam due) High performance computing, cloud computing</td>
+            <td align="right" style="width:20%;text-align:right">Week 8 (10/18)</td>
+            <td style="width:50%;text-align:left">Scraping, APIs, and Regular Expressions</td>
             <td align="center" style="width:10%;text-align:center"><a
-                    href="../reading/09-reading/">
+                    href="../reading/07-reading/">
                     <i class="fas fa-book-reader fa-lg"></i></a></td>
-            <td align="center" style="width:10%;text-align:center"><a href="../class/09-class/">
+            <td align="center" style="width:10%;text-align:center"><a href="../class/07-class/">
                     <i class="fas fa-chalkboard-teacher fa-lg"></i></a></td>
             <td align="center" style="width:10%;text-align:center">
                 <font color="f1f1f1">
@@ -642,24 +629,24 @@
             </td>
         </tr>
         <tr>
-            <td align="right" style="width:20%;text-align:right">Week 10 (10/27)</td>
-            <td style="width:50%;text-align:left">Managing big data, SQL and non-SQL languages, Google BigQuery</td>
+            <td align="right" style="width:20%;text-align:right">Week 9 (10/25)</td>
+            <td style="width:50%;text-align:left">(Midterm Project due) High Performance Computing, Cloud Computing</td>
             <td align="center" style="width:10%;text-align:center"><a
-                    href="../reading/10-reading/">
+                    href="../reading/09-reading/">
                     <i class="fas fa-book-reader fa-lg"></i></a></td>
-            <td align="center" style="width:10%;text-align:center"><a href="../class/10-class/">
+            <td align="center" style="width:10%;text-align:center"><a href="../class/09-class/">
                     <i class="fas fa-chalkboard-teacher fa-lg"></i></a></td>
             <td align="center" style="width:10%;text-align:center"><a
                     href="../assignment/09-hw3/">
                     <i class="fas fa-laptop-code"></i></a></td>
         </tr>
         <tr>
-            <td align="right" style="width:20%;text-align:right">Week 11 (11/3)</td>
-            <td style="width:50%;text-align:left">Interactive visualization and effective data communication I</td>
+            <td align="right" style="width:20%;text-align:right">Week 10 (11/1)</td>
+            <td style="width:50%;text-align:left">Managing Big Data, SQL and Non-SQL Languages, Google BigQuery</td>
             <td align="center" style="width:10%;text-align:center"><a
-                    href="../reading/11-reading/">
+                    href="../reading/10-reading/">
                     <i class="fas fa-book-reader fa-lg"></i></a></td>
-            <td align="center" style="width:10%;text-align:center"><a href="../class/11-class/">
+            <td align="center" style="width:10%;text-align:center"><a href="../class/10-class/">
                     <i class="fas fa-chalkboard-teacher fa-lg"></i></a></td>
             <td align="center" style="width:10%;text-align:center">
                 <font color="f1f1f1">
@@ -667,23 +654,20 @@
             </td>
         </tr>
         <tr>
-            <td align="right" style="width:20%;text-align:right">Week 12 (11/10)</td>
-            <td style="width:50%;text-align:left">Veterans Day (No class)</td>
-            <td align="center" style="width:10%;text-align:center">
-                <font color="f1f1f1">
-                    <i class="fas fa-book-reader fa-lg"></i></font>
-            </td>
-            <td align="center" style="width:10%;text-align:center">
-                <font color="f1f1f1">
-                    <i class="fas fa-chalkboard-teacher fa-lg"></i></font>
-            </td>
+            <td align="right" style="width:20%;text-align:right">Week 11 (11/8)</td>
+            <td style="width:50%;text-align:left">Interactive Visualization &amp; Effective Data Communication I</td>
+            <td align="center" style="width:10%;text-align:center"><a
+                    href="../reading/11-reading/">
+                    <i class="fas fa-book-reader fa-lg"></i></a></td>
+            <td align="center" style="width:10%;text-align:center"><a href="../class/11-class/">
+                    <i class="fas fa-chalkboard-teacher fa-lg"></i></a></td>
             <td align="center" style="width:10%;text-align:center"><a
                     href="../assignment/11-hw4/">
                     <i class="fas fa-laptop-code"></i></a></td>
         </tr>
         <tr>
-            <td align="right" style="width:20%;text-align:right">Week 13 (11/17)</td>
-            <td style="width:50%;text-align:left">Interactive visualization and effective data communication II</td>
+            <td align="right" style="width:20%;text-align:right">Week 12 (11/15)</td>
+            <td style="width:50%;text-align:left">Interactive Visualization and Effective Data Communication II</td>
             <td align="center" style="width:10%;text-align:center"><a
                     href="../reading/12-reading/">
                     <i class="fas fa-book-reader fa-lg"></i></a></td>
@@ -695,8 +679,20 @@
             </td>
         </tr>
         <tr>
-            <td align="right" style="width:20%;text-align:right">Week 14 (11/24)</td>
-            <td style="width:50%;text-align:left">Thanksgiving Holiday</td>
+            <td align="right" style="width:20%;text-align:right">Week 13 (11/22)</td>
+            <td style="width:50%;text-align:left">Final project workshop</td>
+            <td align="center" style="width:10%;text-align:center"><a
+                    href="../reading/13-reading/">
+                    <i class="fas fa-book-reader fa-lg"></i></a></td>
+            <td align="center" style="width:10%;text-align:center"><a href="../class/13-class/">
+                    <i class="fas fa-chalkboard-teacher fa-lg"></i></a></td>
+            <td align="center" style="width:10%;text-align:center"><a
+                    href="../assignment/14-final/">
+                    <i class="fas fa-laptop-code"></i></a></td>
+        </tr>
+        <tr>
+            <td align="right" style="width:20%;text-align:right">Week 14 (11/29)</td>
+            <td style="width:50%;text-align:left">NO CLASS - Thanksgiving Holiday</td>
             <td align="center" style="width:10%;text-align:center">
                 <font color="f1f1f1">
                     <i class="fas fa-book-reader fa-lg"></i></font>
@@ -711,29 +707,20 @@
             </td>
         </tr>
         <tr>
-            <td align="right" style="width:20%;text-align:right">Week 15 (12/1)</td>
-            <td style="width:50%;text-align:left">Final project workshop: review progress</td>
-            <td align="center" style="width:10%;text-align:center"><a
-                    href="../reading/13-reading/">
-                    <i class="fas fa-book-reader fa-lg"></i></a></td>
-            <td align="center" style="width:10%;text-align:center"><a href="../class/13-class/">
-                    <i class="fas fa-chalkboard-teacher fa-lg"></i></a></td>
+            <td align="right" style="width:20%;text-align:right">Week 15 (12/6)</td>
+            <td style="width:50%;text-align:left">Final Project Due</td>
+            <td align="center" style="width:10%;text-align:center">
+                <font color="f1f1f1">
+                    <i class="fas fa-book-reader fa-lg"></i></font>
+            </td>
+            <td align="center" style="width:10%;text-align:center">
+                <font color="f1f1f1">
+                    <i class="fas fa-chalkboard-teacher fa-lg"></i></font>
+            </td>
             <td align="center" style="width:10%;text-align:center">
                 <font color="f1f1f1">
                     <i class="fas fa-laptop-code"></i></font>
             </td>
-        </tr>
-        <tr>
-            <td align="right" style="width:20%;text-align:right">Week 16 (12/8)</td>
-            <td style="width:50%;text-align:left">Final Project</td>
-            <td align="center" style="width:10%;text-align:center"><a
-                    href="../reading/14-reading/">
-                    <i class="fas fa-book-reader fa-lg"></i></a></td>
-            <td align="center" style="width:10%;text-align:center"><a href="../class/14-class/">
-                    <i class="fas fa-chalkboard-teacher fa-lg"></i></a></td>
-            <td align="center" style="width:10%;text-align:center"><a
-                    href="../assignment/14-final/">
-                    <i class="fas fa-laptop-code"></i></a></td>
         </tr>
 <pre><code>&lt;/tbody&gt;
 </code></pre>
