--- a/syllabus/index.html
+++ b/syllabus/index.html
@@ -637,68 +637,64 @@ Time: Friday 9am - 12:55pm"><meta property="og:image" content="https://uscbiosta
 <p><table class="table schedule" style="max-width:100%">
     <tbody>
             <tr>
-             <td align="right" style="width:20%;text-align:left">Week 1 (8/25)</td>
-             <td style="width:50%;text-align:left">Introduction to Data Science tools: R, Python, Markdown, Git, command line tools</td>
+             <td align="right" style="width:20%;text-align:left">Week 1 (8/30)</td>
+             <td style="width:50%;text-align:left">Introduction to Data Science tools: R, Python, Quarto, Git, command line tools</td>
             </tr>
             <tr>
-             <td align="right" style="width:20%;text-align:left">Week 2 (9/1)</td>
-             <td style="width:50%;text-align:left">Version Control &amp; Reproducible Research</td>
+             <td align="right" style="width:20%;text-align:left">Week 2 (9/6)</td>
+             <td style="width:50%;text-align:left">GitHub, Version Control, &amp; Reproducible Research</td>
             </tr>
             <tr>
-             <td align="right" style="width:20%;text-align:left">Week 3 (9/8)</td>
-             <td style="width:50%;text-align:left">Exploratory data analysis</td>
+             <td align="right" style="width:20%;text-align:left">Week 3 (9/13)</td>
+             <td style="width:50%;text-align:left">Exploratory Data Analysis</td>
             </tr>
             <tr>
-             <td align="right" style="width:20%;text-align:left">Week 4 (9/15)</td>
-             <td style="width:50%;text-align:left">Data visualization</td>
+             <td align="right" style="width:20%;text-align:left">Week 4 (9/20)</td>
+             <td style="width:50%;text-align:left">Data Visualization</td>
             </tr>
             <tr>
-             <td align="right" style="width:20%;text-align:left">Week 5 (9/22)</td>
-             <td style="width:50%;text-align:left">Data cleaning and wrangling</td>
+             <td align="right" style="width:20%;text-align:left">Week 5 (9/27)</td>
+             <td style="width:50%;text-align:left">Data Cleaning and Wrangling</td>
             </tr>
             <tr>
-             <td align="right" style="width:20%;text-align:left">Week 6 (9/29)</td>
-             <td style="width:50%;text-align:left">Text Mining</td>
+             <td align="right" style="width:20%;text-align:left">Week 6 (10/4)</td>
+             <td style="width:50%;text-align:left">Text Mining &amp; Sentiment Analysis</td>
             </tr>
             <tr>
-             <td align="right" style="width:20%;text-align:left">Week 7 (10/6)</td>
+             <td align="right" style="width:20%;text-align:left">Week 7 (10/11)</td>
+             <td style="width:50%;text-align:left">NO CLASS - Fall Recess. Midterm Project</td>
+            </tr>
+            <tr>
+             <td align="right" style="width:20%;text-align:left">Week 8 (10/18)</td>
              <td style="width:50%;text-align:left">Scraping, APIs, and Regular Expressions</td>
             </tr>
             <tr>
-             <td align="right" style="width:20%;text-align:left">Week 8 (10/13)</td>
-             <td style="width:50%;text-align:left">Fall Recess (No class). Midterm Exam</td>
+             <td align="right" style="width:20%;text-align:left">Week 9 (10/25)</td>
+             <td style="width:50%;text-align:left">(Midterm Project due) High Performance Computing, Cloud Computing</td>
             </tr>
             <tr>
-             <td align="right" style="width:20%;text-align:left">Week 9 (10/20)</td>
-             <td style="width:50%;text-align:left">(Midterm Exam due) High performance computing, cloud computing</td>
+             <td align="right" style="width:20%;text-align:left">Week 10 (11/1)</td>
+             <td style="width:50%;text-align:left">Managing Big Data, SQL and Non-SQL Languages, Google BigQuery</td>
             </tr>
             <tr>
-             <td align="right" style="width:20%;text-align:left">Week 10 (10/27)</td>
-             <td style="width:50%;text-align:left">Managing big data, SQL and non-SQL languages, Google BigQuery</td>
+             <td align="right" style="width:20%;text-align:left">Week 11 (11/8)</td>
+             <td style="width:50%;text-align:left">Interactive Visualization &amp; Effective Data Communication I</td>
             </tr>
             <tr>
-             <td align="right" style="width:20%;text-align:left">Week 11 (11/3)</td>
-             <td style="width:50%;text-align:left">Interactive visualization and effective data communication I</td>
+             <td align="right" style="width:20%;text-align:left">Week 12 (11/15)</td>
+             <td style="width:50%;text-align:left">Interactive Visualization and Effective Data Communication II</td>
             </tr>
             <tr>
-             <td align="right" style="width:20%;text-align:left">Week 12 (11/10)</td>
-             <td style="width:50%;text-align:left">Veterans Day (No class)</td>
+             <td align="right" style="width:20%;text-align:left">Week 13 (11/22)</td>
+             <td style="width:50%;text-align:left">Final project workshop</td>
             </tr>
             <tr>
-             <td align="right" style="width:20%;text-align:left">Week 13 (11/17)</td>
-             <td style="width:50%;text-align:left">Interactive visualization and effective data communication II</td>
+             <td align="right" style="width:20%;text-align:left">Week 14 (11/29)</td>
+             <td style="width:50%;text-align:left">NO CLASS - Thanksgiving Holiday</td>
             </tr>
             <tr>
-             <td align="right" style="width:20%;text-align:left">Week 14 (11/24)</td>
-             <td style="width:50%;text-align:left">Thanksgiving Holiday</td>
-            </tr>
-            <tr>
-             <td align="right" style="width:20%;text-align:left">Week 15 (12/1)</td>
-             <td style="width:50%;text-align:left">Final project workshop: review progress</td>
-            </tr>
-            <tr>
-             <td align="right" style="width:20%;text-align:left">Week 16 (12/8)</td>
-             <td style="width:50%;text-align:left">Final Project</td>
+             <td align="right" style="width:20%;text-align:left">Week 15 (12/6)</td>
+             <td style="width:50%;text-align:left">Final Project Due</td>
             </tr>
 
     </tbody>
