--- a/class/01-class/index.html
+++ b/class/01-class/index.html
@@ -574,7 +574,7 @@ Links   The R Project for Statistical Computing  R Studio  "><meta property="og:
                     <div class="article-style">
                         <h2 id="lab-exercise">Lab Exercise</h2>
 <p>
-<a href="/PM566/assignment/01-lab.html">link</a></p>
+<a href="/PM566/assignment/01-lab">link</a></p>
 <p>
 <a href="https://github.com/USCbiostats/PM566/blob/master/website/static/labs/lab-01/pm566-01-lab.zip" target="_blank" rel="noopener">Download</a> (click the “download” icon on the right, near the “Raw” button, then unzip the file)</p>
 <h2 id="slides">Slides</h2>
